[package]
name = "agesim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
colorgrad = "0.6.0"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
getrandom = { version = "0.2", features = ["js"] }
log = "0.4.6"
wasm-logger = "0.2.0"
gloo-timers = "0.2.4"
plotters = {version = "0.3.2"}
plotters-canvas = { version = "0.3.0", features=[] }
wasm-bindgen = "0.2.81"
stylist = { git="https://github.com/futursolo/stylist-rs", features = ["yew_integration"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]
